--- a/Cookbook/Cookbook.WebApplication/appsettings.json
+++ b/Cookbook/Cookbook.WebApplication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;Database=Cookbook.Authentication;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=localhost;Database=CookbookAuthentication;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
